Changed the width of the image in the card to ensure there's no gaps in all screen sizes

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -171,7 +171,7 @@ nav a {
 
 /* Styling for images in cards */
 .card img {
-    width: 107%;
+    width: 120%;
     height: 160px;
     object-fit: cover;
     object-position: top;
